<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#4468d4"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testResult"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout

        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="2"
        android:layout_below="@+id/lin1"
        >
        <Button
            android:id="@+id/btn_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moremessage"
            />
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backTestView"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/tv"
        android:layout_below="@+id/lin2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#534a4a"
        />
    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        >
        <TextView
            android:id="@+id/forceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#df131d"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        >
        <TextView
            android:id="@+id/forceKin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#df131d"
            android:textSize="20sp"
            />
    </LinearLayout>
    </LinearLayout>
    <HorizontalScrollView
        android:id="@+id/lin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin3"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#df131d"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            />

            <TextView
                android:paddingLeft="20dp"
                android:id="@+id/MinAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#df131d"
                android:textSize="20sp"
                />

    </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lin4"
        >

        <view.PinchImageView
            android:id="@+id/pinchImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher">
        </view.PinchImageView>
    </LinearLayout>
</RelativeLayout>